# CFD_Practise

./: CMakeLists.txt  CombinedMethod.cpp  CombinedMethod.h  FiniteDifference.cpp  FiniteDifference.h  Model.ipynb  Readme.md  ShockTubeEuler.cpp  ShockTubeEuler.h  ShockTubeLaxWendroff.cpp  ShockTubeLaxWendroff.h  ThomasAlgorithm.cpp  ThomasAlgorithm.h  ViscousBurgers.cpp  ViscousBurgers.h  get_cpm.cmake  main.cpp
